- Don't disable wxComboBox after recreating it (Oleksandra Yushchenko, #23132).
- Fix wxJoystick::GetProductName() returning nothing (Maarten Bent, #23172).
- Work around MSVS 2022 optimizer bug in wxImage::ShrinkBy() (#23164).
- Fix link error with wxSimplebook in DLL builds (Mark Roszko, #22805).
- Avoid errors when including wx/msw/msvcrt.h before other wx headers (#23194).

wxOSX:

- Fix possible crash in menu item event handling (#23040).
- Fix regression in text drawing when using clipping (#22629).
- Don't round fractional point size when creating fonts (#23144).
- Do round size returned by wxFont::GetPixelS().
- Map wxFONTFAMILY_DEFAULT to wxFONTFAMILY_SWISS as in the other ports (#23158).
- Generate wxEVT_DATAVIEW_COLUMN_HEADER_RIGHT_CLICK (#22833).
- Fix wxDataViewCtrl::HitTest() (Vojtěch Bubník, #22789).
- Fix position of the controls in wxStaticBox after resizing it (#22837).
- Ensure that "Window" menu is inserted before "Help" (#22871).
- Fix compiling with Xcode 7.3 and macOS 11 SDK (crazbot, #22988).
- Always call wxTaskBarIcon::GetPopupMenu() (William Lindnilsson, #23008).
- Fix scaling wxTaskBarIcon in high DPI (William Lindnilsson, #23042).
- Add margins around wxListCtrl items to improve appearance (#23155).
- Fix shortcuts handling in wxWebView (#23151).
- Make wxLOCALE_FORM_ENGLISH actually work (Ulrich Telle, Lauri Nurmi, #23190).
- Fix "Window" menu item not being translated sometimes (#23204).
- Fix wxLocale::GetCurrent() when the current locale is "C".
- Fix wxLocale::Init(wxLANGUAGE_DEFAULT) with "mixed" locales (#23114).
- Fix setting Chinese locales (#23209).

wxQt:

- Fix creating wxFont using fractional point size (Ali Kettab, #23163).


3.2.1: (released 2022-09-09)
----------------------------

All (GUI):

- Add wxFileDialog::AddShortcut() (#22543).
- Fix grid window scrollbars when freezing part of the grid (#22602).
- Avoid warnings with wxStaticText flags in C++20 (David Connet, #22656).